--- a/css/main.css
+++ b/css/main.css
@@ -322,7 +322,7 @@ h1, h2, h3, h4, h5, h6,
   color: inherit; }
 
 h1, .h1 {
-  font-size: 2rem; }
+  font-size: 2.4rem; }
 
 h2, .h2 {
   font-size: 1.6rem; }
@@ -484,7 +484,7 @@ pre {
       max-width: 960px; } }
   @media (min-width: 1200px) {
     .container {
-      max-width: 1140px; } }
+      max-width: 1200px; } }
 
 .container-fluid {
   width: 100%;
@@ -2225,7 +2225,7 @@ pre {
   color: #495057;
   background-color: #ffffff;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  border: 1px solid #aea8a8;
   border-radius: 0;
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2277,8 +2277,8 @@ select.form-control:focus::-ms-value {
   line-height: 1.5; }
 
 .col-form-label-lg {
-  padding-top: calc(0.5rem + 1px);
-  padding-bottom: calc(0.5rem + 1px);
+  padding-top: calc(1rem + 1px);
+  padding-bottom: calc(1rem + 1px);
   font-size: 1rem;
   line-height: 1.5; }
 
@@ -2332,7 +2332,7 @@ select.form-control-sm:not([size]):not([multiple]), .input-group-sm > select.for
 .input-group-lg > .input-group-append > .input-group-text,
 .input-group-lg > .input-group-prepend > .btn,
 .input-group-lg > .input-group-append > .btn {
-  padding: 0.5rem 1rem;
+  padding: 1rem 1rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0; }
@@ -2342,10 +2342,10 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 .input-group-lg > .input-group-append > select.input-group-text:not([size]):not([multiple]),
 .input-group-lg > .input-group-prepend > select.btn:not([size]):not([multiple]),
 .input-group-lg > .input-group-append > select.btn:not([size]):not([multiple]) {
-  height: calc(2.5rem + 2px); }
+  height: calc(3.5rem + 2px); }
 
 .form-group {
-  margin-bottom: 1rem; }
+  margin-bottom: 0.8rem; }
 
 .form-text {
   display: block;
@@ -3049,7 +3049,7 @@ fieldset[disabled] a.btn {
     color: #868e96; }
 
 .btn-lg, .btn-group-lg > .btn {
-  padding: 0.5rem 1rem;
+  padding: 1rem 1rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0; }
@@ -3446,7 +3446,7 @@ tbody.collapse.show {
   text-align: center;
   white-space: nowrap;
   background-color: #e9ecef;
-  border: 1px solid #ced4da;
+  border: 1px solid #aea8a8;
   border-radius: 0; }
   .input-group-text input[type="radio"],
   .input-group-text input[type="checkbox"] {
@@ -3558,11 +3558,11 @@ tbody.collapse.show {
   height: calc(1.95rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   line-height: 1.5;
-  color: #495057;
+  color: #686868;
   vertical-align: middle;
   background: #ffffff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
   background-size: 8px 10px;
-  border: 1px solid #ced4da;
+  border: 1px solid #aea8a8;
   border-radius: 0;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -3592,7 +3592,7 @@ tbody.collapse.show {
   font-size: 75%; }
 
 .custom-select-lg {
-  height: calc(2.5rem + 2px);
+  height: calc(3.5rem + 2px);
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   font-size: 125%; }
@@ -3601,14 +3601,14 @@ tbody.collapse.show {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: 2.6rem;
+  height: 3.66rem;
   margin-bottom: 0; }
 
 .custom-file-input {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: 2.6rem;
+  height: 3.66rem;
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-control {
@@ -3628,12 +3628,12 @@ tbody.collapse.show {
   right: 0;
   left: 0;
   z-index: 1;
-  height: 2.6rem;
-  padding: 0.375rem 0.75rem;
-  line-height: 1.5;
+  height: 3.66rem;
+  padding: 0 0.75rem;
+  line-height: 3.66rem;
   color: #495057;
   background-color: #ffffff;
-  border: 1px solid #ced4da;
+  border: 1px solid #aea8a8;
   border-radius: 0; }
   .custom-file-label::after {
     position: absolute;
@@ -3642,13 +3642,13 @@ tbody.collapse.show {
     bottom: 0;
     z-index: 3;
     display: block;
-    height: calc(2.6rem - 1px * 2);
-    padding: 0.375rem 0.75rem;
-    line-height: 1.5;
+    height: calc(3.66rem - 1px * 2);
+    padding: 0 0.75rem;
+    line-height: 3.66rem;
     color: #495057;
     content: "Browse";
     background-color: #e9ecef;
-    border-left: 1px solid #ced4da;
+    border-left: 1px solid #aea8a8;
     border-radius: 0 0 0 0; }
 
 .nav {
@@ -7897,6 +7897,9 @@ a.text-dark:focus, a.text-dark:hover {
   .table-bordered td {
     border: 1px solid #ddd !important; } }
 
+h1, h2, h3, h4, h5, h6 {
+  color: #000000; }
+
 @media (min-width: 992px) {
   .col-lg-2-4 {
     -webkit-box-flex: 0;
@@ -7916,11 +7919,9 @@ a.text-dark:focus, a.text-dark:hover {
             flex: 0 0 45.45455%;
     max-width: 45.45455%; } }
 
-.input-group-lg .custom-file-label {
-  line-height: 1.8;
-  font-size: 1rem; }
-  .input-group-lg .custom-file-label::after {
-    line-height: 1.8; }
+.custom-file-label {
+  font-size: 1rem;
+  color: #686868; }
 
 .sub-banner {
   position: relative;
@@ -7945,9 +7946,6 @@ a.text-dark:focus, a.text-dark:hover {
     .sub-banner h1 {
       font-size: 2rem;
       bottom: -.4rem; } }
-
-.btn-lg, .btn-group-lg > .btn, .btn-group-lg > .btn {
-  font-size: 1.2rem; }
 
 .text-underline {
   text-decoration: underline; }
@@ -8161,7 +8159,8 @@ a.text-dark:focus, a.text-dark:hover {
 
 .htitle {
   position: relative; }
-  .htitle h2 {
+  .htitle h1 {
+    font-size: 2.6rem;
     font-weight: 700;
     padding: 15px 0; }
   .htitle span {
@@ -8188,11 +8187,16 @@ a.text-dark:focus, a.text-dark:hover {
       right: 0;
       top: .85rem; }
 
+.list-news .col-lg-5-11 .card-img-top {
+  width: 100%;
+  height: 420px; }
+
 .list-news .card {
   border: none; }
   .list-news .card .card-body {
     background: #e9ecef; }
     .list-news .card .card-body .title {
+      color: #000000;
       font-weight: 700;
       border-left: 5px solid #2b00ff;
       padding-left: 10px; }
@@ -8433,10 +8437,24 @@ a.text-dark:focus, a.text-dark:hover {
           background: #d30012;
           border-radius: 5px; }
 
+.user-center-body > form > .row > .col-12:nth-child(odd) {
+  padding-right: 0.4rem; }
+
+.user-center-body > form > .row > .col-12:nth-child(even) {
+  padding-left: 0.4rem; }
+
 .user-center-body .info-container .col-6 {
-  padding-left: 0; }
+  position: relative;
+  padding-left: 0;
+  margin-bottom: 0.8rem; }
   .user-center-body .info-container .col-6 > div {
-    height: 6.25rem; }
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #aea8a8;
+    background: #f3f4f4; }
     .user-center-body .info-container .col-6 > div input {
       position: absolute;
       left: 0;
@@ -8448,7 +8466,8 @@ a.text-dark:focus, a.text-dark:hover {
       font-size: 1.2rem; }
 
 .user-center-body .info-container .col-18 {
-  padding-right: 0; }
+  padding-right: 0;
+  padding-left: 0.8rem; }
 
 .user-center-body .event-list .col-md-12:nth-child(odd) {
   padding-right: 25px; }
@@ -8476,8 +8495,7 @@ a.text-dark:focus, a.text-dark:hover {
     border-bottom: 2px solid #000000;
     padding: .5rem 0 .75rem; }
     .review-list .item-review .card-body h3 {
-      font-weight: bold;
-      color: #000000; }
+      font-weight: bold; }
 
 .work-upload > div {
   padding: 0 10px; }
@@ -8530,6 +8548,34 @@ a.text-dark:focus, a.text-dark:hover {
     height: 100%;
     z-index: 2; }
 
+.fancypop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7); }
+  .fancypop.hide {
+    display: none; }
+  .fancypop .content {
+    width: 1200px;
+    height: 800px;
+    background: white;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate3d(-50%, -50%, 0);
+            transform: translate3d(-50%, -50%, 0); }
+
 .navbar {
   padding: 20px 0 10px; }
   .navbar .navbar-toggler {
@@ -8575,7 +8621,7 @@ a.text-dark:focus, a.text-dark:hover {
   font-size: .9rem; }
 
 .sign-up .logo img {
-  max-width: 250px; }
+  max-width: 100%; }
 
 .news-detail .header .row {
   margin: 0 auto; }
