--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,3 +1,11 @@
+h1, h2, h3, h4, h5, h6 {
+  color: $black;
+}
+
+// a.btn:hover {
+//   color: $white;
+// }
+
 @include media-breakpoint-up(lg) {
   .col-lg-2-4{
     @include make-col(1, 5);
@@ -16,14 +24,9 @@
 //   color: $white;
 // }
 
-.input-group-lg {
-  .custom-file-label {
-    line-height: 1.8;
-    font-size: 1rem;
-    &::after {
-      line-height: 1.8;
-    }
-  }
+.custom-file-label {
+  font-size: 1rem;
+  color: $body-color;
 }
 
 .sub-banner {
@@ -54,10 +57,6 @@
       bottom: -.4rem;
     }
   }
-}
-
-.btn-lg, .btn-group-lg > .btn {
-  font-size: 1.2rem;
 }
 
 .text-underline {
@@ -99,7 +98,8 @@
 
 .htitle {
   position: relative;
-  h2 {
+  h1 {
+    font-size: 2.6rem;
     font-weight: $font-weight-bold;
     padding: 15px 0;
   }
@@ -141,11 +141,18 @@
     // border: 1px solid red;
     // height: 100px;
   }
+  .col-lg-5-11 {
+    .card-img-top {
+      width: 100%;
+      height: 420px;
+    }
+  }
   .card {
     border: none;
     .card-body {
       background: $gray-200;
       .title {
+        color: $black;
         font-weight: $font-weight-bold;
         border-left: 5px solid $cyan;
         padding-left: 10px;
@@ -486,11 +493,27 @@
 }
 
 .user-center-body {
+  >form >.row >.col-12 {
+    &:nth-child(odd) {
+      padding-right: $form-group-margin-bottom/2;
+    }
+    &:nth-child(even) {
+      padding-left: $form-group-margin-bottom/2;
+    }
+  }
   .info-container {
     .col-6 {
+      position: relative;
       padding-left: 0;
+      margin-bottom: 0.8rem;
       > div {
-        height: 6.25rem;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        border: 1px solid $input-border-color;
+        background: #f3f4f4;
         input {
           position: absolute;
           left: 0;
@@ -506,6 +529,7 @@
     }
     .col-18 {
       padding-right: 0;
+      padding-left: $form-group-margin-bottom;
     }
   }
   .event-list {
@@ -545,7 +569,6 @@
       padding: .5rem 0 .75rem;
       h3 {
         font-weight: bold;
-        color: $black;
       }
     }
   }
@@ -614,5 +637,29 @@
       height: 100%;
       z-index: 2;
     }
+  }
+}
+
+.fancypop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  bottom: 0;
+  background: rgba(0,0,0,.7);
+  &.hide {
+    display: none;
+  }
+  .content {
+    width: 1200px;
+    height: 800px;
+    background: white;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate3d(-50%, -50%, 0);
   }
 }
