--- a/css/main.css
+++ b/css/main.css
@@ -7923,6 +7923,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1rem;
   color: #686868; }
 
+.custom-file-container {
+  border: 1px solid #aea8a8;
+  background: #f3f4f4; }
+
 .sub-banner {
   position: relative;
   height: 396px; }
@@ -8452,9 +8456,7 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
-    border: 1px solid #aea8a8;
-    background: #f3f4f4; }
+    height: 100%; }
     .user-center-body .info-container .col-6 > div input {
       position: absolute;
       left: 0;
@@ -8498,7 +8500,10 @@ h1, h2, h3, h4, h5, h6 {
       font-weight: bold; }
 
 .work-upload > div {
-  padding: 0 10px; }
+  padding: 0 10px;
+  height: 10rem; }
+  .work-upload > div.dashed {
+    border: 1px dashed #aea8a8; }
 
 .work-upload .upload-container {
   height: 10rem;
@@ -8534,19 +8539,25 @@ h1, h2, h3, h4, h5, h6 {
 .word-desc textarea {
   height: 15rem; }
 
-.word-desc .poster {
-  height: 18.62rem; }
-  .word-desc .poster i {
-    font-size: 1.4rem; }
-  .word-desc .poster p {
-    font-size: 1rem; }
-  .word-desc .poster .custom-file-input {
+.word-desc > div {
+  position: relative; }
+  .word-desc > div .poster {
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
-    z-index: 2; }
+    height: 100%; }
+    .word-desc > div .poster i {
+      font-size: 1.4rem; }
+    .word-desc > div .poster p {
+      font-size: 1rem; }
+    .word-desc > div .poster .custom-file-input {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 2; }
 
 .fancypop {
   display: -webkit-box;
