--- a/styles/common.scss
+++ b/styles/common.scss
@@ -2,10 +2,6 @@ h1, h2, h3, h4, h5, h6 {
   color: $black;
 }
 
-// a.btn:hover {
-//   color: $white;
-// }
-
 @include media-breakpoint-up(lg) {
   .col-lg-2-4{
     @include make-col(1, 5);
@@ -20,13 +16,15 @@ h1, h2, h3, h4, h5, h6 {
     @include make-col(5, 11);
   }
 }
-// .btn-secondary {
-//   color: $white;
-// }
 
 .custom-file-label {
   font-size: 1rem;
   color: $body-color;
+}
+
+.custom-file-container {
+  border: 1px solid $input-border-color;
+  background: #f3f4f4;
 }
 
 .sub-banner {
@@ -512,8 +510,6 @@ h1, h2, h3, h4, h5, h6 {
         top: 0;
         width: 100%;
         height: 100%;
-        border: 1px solid $input-border-color;
-        background: #f3f4f4;
         input {
           position: absolute;
           left: 0;
@@ -577,6 +573,10 @@ h1, h2, h3, h4, h5, h6 {
 .work-upload {
   > div {
     padding: 0 10px;
+    height: 10rem;
+    &.dashed {
+      border: 1px dashed $input-border-color;
+    }
   }
   .upload-container {
     height: 10rem;
@@ -621,21 +621,28 @@ h1, h2, h3, h4, h5, h6 {
   textarea {
     height: 15rem;
   }
-  .poster {
-    height: 18.62rem;
-    i {
-      font-size: 1.4rem;
-    }
-    p {
-      font-size: 1rem;
-    }
-    .custom-file-input {
+  > div {
+    position: relative;
+    .poster {
       position: absolute;
       left: 0;
       top: 0;
       width: 100%;
       height: 100%;
-      z-index: 2;
+      i {
+        font-size: 1.4rem;
+      }
+      p {
+        font-size: 1rem;
+      }
+      .custom-file-input {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+      }
     }
   }
 }
