自定义默认英文字体

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'DIN';
+  src: url('../font/DIN-Regular.otf');
+  font-weight: normal;
+}
+@font-face {
+  font-family: 'DIN';
+  src: url('../font/DIN-Bold.otf');
+  font-weight: bold;
+}
 h1, h2, h3, h4, h5, h6 {
   color: $black;
 }
