--- a/styles/common.scss
+++ b/styles/common.scss
@@ -121,6 +121,12 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.banner-home {
+  > div {
+    width: 100%;
+  }
+}
+
 .list-competiton {
   .card {
     border: none;
