--- a/styles/common.scss
+++ b/styles/common.scss
@@ -27,6 +27,26 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+// custom pagination
+.page-item {
+  &.active {
+    .page-link {
+      background-color: #686868;
+    }
+  }
+  &:first-child .page-link,
+  &:last-child .page-link {
+    background-color: $white;
+  }
+  .page-link {
+    border: none;
+    background-color: #eeeeee;
+    padding: 0.5rem 0.65rem;
+    margin: 0 5px;
+  }
+}
+
+
 .custom-file-label {
   font-size: 1rem;
   color: $body-color;
