首页轮播样式更新

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -99,6 +99,7 @@ $custom-file-line-height: $custom-file-height;
 @import "editor";
 
 // page
+@import "banner";
 @import "signup";
 @import "news";
 @import "customFancybox";
