--- a/styles/main.scss
+++ b/styles/main.scss
@@ -87,6 +87,7 @@ $custom-select-color: $body-color;
 $custom-file-height: 3.66rem;
 $custom-file-padding-y: 0;
 $custom-file-line-height: $custom-file-height;
+$link-hover-decoration: none;
 
 
 // bootstrap
