首页最新资讯样式微调

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -21,9 +21,21 @@ h1, h2, h3, h4, h5, h6 {
 @include media-breakpoint-up(lg) {
   .col-lg-3-11{
     @include make-col(3, 11);
+    padding: 0 10px;
   }
   .col-lg-5-11{
     @include make-col(5, 11);
+    padding: 0 10px;
+  }
+}
+@include media-breakpoint-up(md) {
+  .col-md-3-11{
+    @include make-col(3, 11);
+    padding: 0 10px;
+  }
+  .col-md-5-11{
+    @include make-col(5, 11);
+    padding: 0 10px;
   }
 }
 
@@ -171,20 +183,29 @@ a.link {
 }
 
 .list-news {
-  > div {
-    // border: 1px solid red;
-    // height: 100px;
+  @include make-row();
+  .column-middle {
+    .card {
+      .card-body {
+        padding-top: 1.9rem;
+        padding-bottom: 2.5rem;
+        .label {
+          margin-top: 2rem;
+          margin-bottom: 2rem;
+        }
+      }
+    }
   }
   .col-lg-5-11 {
     .card-img-top {
       width: 100%;
-      height: 420px;
     }
   }
   .card {
     border: none;
     .card-body {
       background: $gray-200;
+      padding-bottom: 2rem;
       .title {
         color: $black;
         font-weight: $font-weight-bold;
@@ -196,8 +217,8 @@ a.link {
         margin-left: 15px;
       }
       .label {
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
         color: $cyan;
       }
     }
