--- a/styles/banner.scss
+++ b/styles/banner.scss
@@ -28,20 +28,22 @@
   }
   .owl-nav {
     position: absolute;
+    width: 100%;
     top: 50%;
+    height: 144px;
     transform: translate3d(0, -50%, 0);
-    display: flex;
-    justify-content: space-between;
     > div {
       width: 80px;
       height: 144px;
       text-indent: -9999px;
       &.owl-prev {
-        margin-left: 73px;
+        position: absolute;
+        left: 73px;
         background: url(../images/arrow-left.png) center center / contain no-repeat;
       }
       &.owl-next {
-        margin-right: 73px;
+        position: absolute;
+        right: 73px;
         background: url(../images/arrow-right.png) center center / contain no-repeat;
       }
     }
@@ -61,14 +63,15 @@
       }
     }
     .owl-nav {
+      height: 144px * 1/3;
       > div {
         width: 80px * 1/3;
         height: 144px * 1/3;
         &.owl-prev {
-          margin-left: 73px * 1/3;
+          left: 73px * 1/3;
         }
         &.owl-next {
-          margin-right: 73px * 1/3;
+          right: 73px * 1/3;
         }
       }
     }
