修复首页banner比例

--- a/styles/banner.scss
+++ b/styles/banner.scss
@@ -2,6 +2,12 @@
   > div {
     width: 100%;
   }
+  .owl-item {
+    >a >div >img {
+      width: 100%!important;
+      height: auto!important;
+    }
+  }
   .owl-dots {
     position: absolute;
     bottom: 0;
