--- a/styles/common.scss
+++ b/styles/common.scss
@@ -225,8 +225,19 @@ a.link {
   }
 }
 
+.item-history-container {
+  .col-md-12 {
+    position: relative;
+    overflow: hidden;
+  }
+}
 .item-history {
   border: none;
+  position: static;
+  padding-bottom: 20px;
+  &.item-history-no-action {
+    padding-bottom: 0;
+  }
   > a {
     transition: $transition-base;
     &:hover {
@@ -237,9 +248,7 @@ a.link {
     border-radius: 0;
   }
   .card-body {
-    position: relative;
     border-top: 3px solid $black;
-    border-bottom: 3px solid $black;
     padding: .5rem 0 .75rem;
     .head {
       margin: 0 auto;
@@ -255,7 +264,14 @@ a.link {
       color: $black;
     }
     .action {
-      margin: 0 auto;
+      width: calc(100% - 20px);
+      border-bottom: 3px solid $black;
+      position: absolute;
+      bottom: 20px;
+      left: 0;
+      margin: 0 10px;
+      box-sizing: border-box;
+      padding-bottom: 1rem;
       .far, .fas {
         font-size: 1.2rem;
       }
