默认中文字体微软雅黑

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,5 @@
 // overrides
-$font-family-sans-serif: 'DIN', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-family-sans-serif: 'DIN', "Microsoft YaHei", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $body-color: #686868;
 $link-color: #686868;
 $font-size-base: .8rem;
