修复海报图比例问题

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -68,6 +68,10 @@ h1, h2, h3, h4, h5, h6 {
   background: #f3f4f4;
 }
 
+.card-img-top {
+  height: auto;
+}
+
 .sub-banner {
   position: relative;
   height: 396px;
