修复首页热门竞赛样式问题

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -176,6 +176,7 @@ a.link {
       padding: .75rem 0;
       h5:first-child {
         margin-bottom: 0;
+        padding-right: 30px;
       }
       .icon {
         position: absolute;
