--- a/styles/common.scss
+++ b/styles/common.scss
@@ -151,7 +151,7 @@ a.link {
   h1 {
     font-size: 2.6rem;
     font-weight: $font-weight-bold;
-    padding: 15px 0;
+    padding: 20px 0 15px;
   }
   span {
     position: absolute;
