修复两处摘要样式

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -217,6 +217,9 @@ a.link {
         border-left: 5px solid $cyan;
         padding-left: 10px;
       }
+      p {
+        white-space: pre-line;
+      }
       .label, p, i {
         font-size: 14px;
         margin-left: 15px;
@@ -863,6 +866,9 @@ a.link {
           p {
             margin-bottom: 10px;
             line-height: 1.4;
+          }
+          small {
+            white-space: pre-line;
           }
         }
       }
