新闻详情页样式微调

--- a/styles/news.scss
+++ b/styles/news.scss
@@ -1,5 +1,9 @@
 .news-detail {
   .header {
+    img {
+      height: auto;
+      max-width: 100%;
+    }
     .row {
       margin: 0 auto;
     }
