--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -1,4 +1,9 @@
+.page-editor,
 .editor {
+  hr {
+    margin: 30px 0;
+    border-top: 2px solid #717171;
+  }
   p {
     font-size: .9rem;
     line-height: 1.8;
@@ -6,6 +11,12 @@
   img {
     max-width: 100%;
   }
+  img.alignright {float:right; margin:0 0 1em 1em}
+  img.alignleft {float:left; margin:0 1em 1em 0}
+  img.aligncenter {display: block; margin-left: auto; margin-right: auto}
+  a img.alignright {float:right; margin:0 0 1em 1em}
+  a img.alignleft {float:left; margin:0 1em 1em 0}
+  a img.aligncenter {display: block; margin-left: auto; margin-right: auto}
 }
 
 .page-editor {
