--- a/styles/common.scss
+++ b/styles/common.scss
@@ -81,6 +81,7 @@ h1, h2, h3, h4, h5, h6 {
   }
   h1 {
     font-size: 3rem;
+    font-weight: bold;
     color: $white;
     position: absolute;
     left: 1.2rem;
