--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -1,5 +1,8 @@
 .page-editor,
 .editor {
+  .contaienr {
+    overflow: hidden;
+  }
   hr {
     margin: 30px 0;
     border-top: 2px solid #717171;
