--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -13,6 +13,7 @@
   }
   img {
     max-width: 100%;
+    height: auto;
   }
   img.alignright {float:right; margin:0 0 1em 1em}
   img.alignleft {float:left; margin:0 1em 1em 0}
