--- a/styles/header.scss
+++ b/styles/header.scss
@@ -9,7 +9,7 @@
     .nav-item a {
       color: $primary;
       font-size: 1rem;
-      font-weight: bold;
+      //font-weight: bold;
     }
   }
   .btn-link {
@@ -19,7 +19,15 @@
   }
   .form-inline {
     position: relative;
-    top: .2rem;
+    top: -.1rem;
+    .search {
+      margin-right: 1rem;
+    }
+    .btn-link {
+      padding: 0.2rem;
+      font-weight: bold;
+      letter-spacing: 0.15rem;
+    }
   }
 }
 
