--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,16 @@
 // overrides
 $font-family-sans-serif: 'DIN', "Microsoft YaHei", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$body-color: #686868;
-$link-color: #686868;
-$font-size-base: .8rem;
-$h1-font-size: $font-size-base * 3;
+$body-color: #000;
+$link-color: #000;
+$font-size-base: 1rem;
+$font-size-xs: 0.75rem;
+$h1-font-size: $font-size-base * 2.5 !default;
+$h2-font-size: $font-size-base * 2 !default;
+$h3-font-size: $font-size-base * 1.25 !default;
+$h4-font-size: $font-size-base * 1.125 !default;
+$h5-font-size: $font-size-base * 1 !default;
+$h6-font-size: $font-size-base * 0.875 !default;
+// $h1-font-size: $font-size-base * 3;
 // $font-size-lg: 2rem;
 
 $grid-columns: 24;
@@ -101,6 +108,7 @@ $link-hover-decoration: none;
 
 // page
 @import "banner";
+@import "home";
 @import "signup";
 @import "news";
 @import "customFancybox";
