首页资讯标签分类

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -238,7 +238,7 @@ a.link {
         font-size: $font-size-xs;
         margin-left: 15px;
       }
-      .label {
+      .label, .label a {
         font-weight: $font-weight-bold;
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;
