增加社会化分享插件

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -105,6 +105,7 @@ $link-hover-decoration: none;
 @import "header";
 @import "footer";
 @import "editor";
+@import "share";
 
 // page
 @import "banner";
