--- a/styles/share.scss
+++ b/styles/share.scss
@@ -4,21 +4,36 @@
   }
   .jiathis_style_32x32 .jtico {
     background: url(../images/icon-share.png) no-repeat left;
-    background-size: cover;
+    background-size: auto 64px;
   }
   .jiathis_style_32x32 .jtico_tsina {
     background-position: 0 0;
+    &:hover {
+      background-position: 0 -32px;
+    }
   }
   .jiathis_style_32x32 .jtico_weixin {
     background-position: -44px 0;
+    &:hover {
+      background-position: -44px -32px;
+    }
   }
   .jiathis_style_32x32 .jtico_qzone {
     background-position: -89px 0;
+    &:hover {
+      background-position: -89px -32px;
+    }
   }
   .jiathis_style_32x32 .jtico_fb {
     background-position: -134px 0;
+    &:hover {
+      background-position: -134px -32px;
+    }
   }
   .jiathis_style_32x32 .jtico_twitter {
     background-position: -178px 0;
+    &:hover {
+      background-position: -178px -32px;
+    }
   }
 }
