--- a/styles/common.scss
+++ b/styles/common.scss
@@ -627,14 +627,6 @@ a.link {
         top: 0;
         width: 100%;
         height: 100%;
-        input {
-          position: absolute;
-          left: 0;
-          top: 0;
-          width: 100%;
-          height: 100%;
-          z-index: 2;
-        }
         i {
           font-size: 1.2rem;
         }
@@ -715,23 +707,25 @@ a.link {
       font-size: 1rem;
       margin-bottom: 0;
     }
-    .custom-file-input {
-      position: absolute;
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 2;
-    }
-    img {
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 3;
-      object-fit: cover;
-    }
+  }
+}
+
+.custom-file-container {
+  img {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    object-fit: cover;
+  }
+  .custom-file-input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
   }
 }
 
