--- a/styles/banner.scss
+++ b/styles/banner.scss
@@ -5,15 +5,21 @@
   .owl-item {
     .card-label {
       min-height: 30px;
+      span, div.tag {
+        font-size: $font-size-xs;
+        font-weight: bold;
+      }
     }
     h4 {
-      font-size: 14px;
+      font-size: $font-size-sm;
+      font-weight: bold;
     }
     .card-body {
       padding: 10px;
       p {
         margin-top: 10px;
         margin-bottom: 0;
+        font-weight: bold;
       }
       h4 {
         margin-bottom: 5px;
