--- a/styles/common.scss
+++ b/styles/common.scss
@@ -726,7 +726,7 @@ a.link {
   }
 }
 
-.word-desc {
+.work-desc {
   textarea {
     height: 15rem;
   }
@@ -743,14 +743,6 @@ a.link {
       }
       p {
         font-size: 1rem;
-      }
-      .custom-file-input {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 2;
       }
     }
   }
