语言切换按钮样式

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -29,6 +29,13 @@
       letter-spacing: 0.15rem;
     }
   }
+  .language-swicher {
+    text-transform: uppercase;
+    padding-left: 1rem;
+    li {
+      list-style: none;
+    }
+  }
 }
 
 
