--- a/styles/common.scss
+++ b/styles/common.scss
@@ -145,6 +145,7 @@ a.link {
 .btn-common {
   width: 150px;
   letter-spacing: 0.3rem;
+  text-indent: 0.3rem;
 }
 
 .icon {
@@ -204,6 +205,7 @@ a.link {
       border-top: 1px solid $black;
       border-bottom: 1px solid $black;
       padding: .75rem 0;
+      margin-top: 1.1rem;
       h5:first-child {
         margin-bottom: 0;
         padding-right: 30px;
@@ -943,5 +945,14 @@ a.link {
   p {
     margin-bottom: 5px;
     font-size: 20px;
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .btn-common {
+    width: 100px;
+    font-size: $font-size-xs;
+    letter-spacing: .2rem;
+    text-indent: .2rem;
   }
 }
