fix: 评委介绍显示2行

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -924,7 +924,7 @@ a.link {
           line-height: 1.4;
         }
         small {
-          white-space: pre;
+          // white-space: pre;
           font-size: $font-size-xs;
         }
       }
