--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,9 +2,10 @@
 $font-family-sans-serif: 'DIN', "Microsoft YaHei", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $body-color: #000;
 $link-color: #000;
-$font-size-base: 1rem;
-$font-size-xs: 0.75rem;
-$font-size-sm: 0.875rem;
+$font-size-base: 1rem; // 16px
+$font-size-xs: 0.75rem; // 14px
+$font-size-sm: 0.875rem; // 12px
+$font-size-lg: 1.5rem; //24px
 $h1-font-size: $font-size-base * 2.5 !default;
 $h2-font-size: $font-size-base * 2 !default;
 $h3-font-size: $font-size-base * 1.25 !default;
@@ -35,6 +36,7 @@ $spacers: (
   6: ($spacer * 4.5),
   7: ($spacer * 6),
   32: ($spacer * 2),
+  48: ($spacer * 3),
 );
 
 $yellow:      #ffde00;
