--- a/styles/main.scss
+++ b/styles/main.scss
@@ -94,14 +94,15 @@ $container-max-widths: (
 
 $input-btn-padding-y-lg: 1rem;
 $input-bg: #f3f4f4;
+$input-color: $body-grey;
 $input-border-color: #aea8a8;
+$input-placeholder-color: $silver;
 $form-group-margin-bottom: .8rem;
-$custom-select-color: $body-color;
+$custom-select-bg: $input-bg;
 $custom-file-height: 4rem;
 $custom-file-padding-y: 0;
 $custom-file-line-height: $custom-file-height;
 $link-hover-decoration: none;
-$input-placeholder-color: $silver;
 
 // bootstrap
 @import "../bootstrap/scss/bootstrap";
