--- a/styles/common.scss
+++ b/styles/common.scss
@@ -906,13 +906,69 @@ a.link {
   }
 }
 
+
+@include media-breakpoint-only(md) {
+  .form-control-lg, .input-group-lg > .form-control, .input-group-lg > .input-group-prepend > .input-group-text, .input-group-lg > .input-group-append > .input-group-text, .input-group-lg > .input-group-prepend > .btn, .input-group-lg > .input-group-append > .btn {
+    padding: .61rem 1rem;
+    font-size: $font-size-sm;
+  }
+  select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.form-control:not([size]):not([multiple]), .input-group-lg > .input-group-prepend > select.input-group-text:not([size]):not([multiple]), .input-group-lg > .input-group-append > select.input-group-text:not([size]):not([multiple]), .input-group-lg > .input-group-prepend > select.btn:not([size]):not([multiple]), .input-group-lg > .input-group-append > select.btn:not([size]):not([multiple]) {
+    height: calc(2.532rem + 2px);
+  }
+  .btn-lg, .btn-group-lg > .btn {
+    padding: .61rem 1rem;
+    font-size: $font-size-sm;
+  }
+  .btn-common {
+    width: 100px;
+    font-size: $font-size-xs;
+    letter-spacing: .2rem;
+    text-indent: .2rem;
+  }
+  .sub-banner {
+    height: rem(250);
+    .container {
+      height: rem(250);
+    }
+    h1 {
+      font-size: rem(30);
+      left: rem(20);
+      bottom: rem(-3);
+    }
+  }
+  .judge-detail {
+    > .container {
+      padding: rem(30)!important;
+    }
+    .banner {
+      padding-top: rem(30)!important;
+      padding-bottom: rem(30)!important;
+      .avatar {
+        width: rem(160);
+      }
+      .desc {
+        h1 {
+          font-size: $font-size-base *1.2;
+          margin-bottom: rem(10)!important;
+        }
+        h3, p {
+          font-size: $font-size-xs *1.2;
+          font-weight: bold;
+        }
+        p {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
+
 .page-help-center {
   p {
     margin-bottom: 5px;
     font-size: 20px;
   }
 }
-
 
 @include media-breakpoint-down(sm) {
   .form-control-lg, .input-group-lg > .form-control, .input-group-lg > .input-group-prepend > .input-group-text, .input-group-lg > .input-group-append > .input-group-text, .input-group-lg > .input-group-prepend > .btn, .input-group-lg > .input-group-append > .btn,
@@ -972,62 +1028,6 @@ a.link {
         }
         h3, p {
           font-size: $font-size-xs;
-          font-weight: bold;
-        }
-        p {
-          margin-bottom: 0;
-        }
-      }
-    }
-  }
-}
-
-@include media-breakpoint-down(md) {
-  .form-control-lg, .input-group-lg > .form-control, .input-group-lg > .input-group-prepend > .input-group-text, .input-group-lg > .input-group-append > .input-group-text, .input-group-lg > .input-group-prepend > .btn, .input-group-lg > .input-group-append > .btn {
-    padding: .61rem 1rem;
-    font-size: $font-size-sm;
-  }
-  select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.form-control:not([size]):not([multiple]), .input-group-lg > .input-group-prepend > select.input-group-text:not([size]):not([multiple]), .input-group-lg > .input-group-append > select.input-group-text:not([size]):not([multiple]), .input-group-lg > .input-group-prepend > select.btn:not([size]):not([multiple]), .input-group-lg > .input-group-append > select.btn:not([size]):not([multiple]) {
-    height: calc(2.532rem + 2px);
-  }
-  .btn-lg, .btn-group-lg > .btn {
-    padding: .61rem 1rem;
-    font-size: $font-size-sm;
-  }
-  .btn-common {
-    width: 100px;
-    font-size: $font-size-xs;
-    letter-spacing: .2rem;
-    text-indent: .2rem;
-  }
-  .sub-banner {
-    height: rem(250);
-    .container {
-      height: rem(250);
-    }
-    h1 {
-      font-size: rem(30);
-      left: rem(20);
-      bottom: rem(-3);
-    }
-  }
-  .judge-detail {
-    > .container {
-      padding: rem(30)!important;
-    }
-    .banner {
-      padding-top: rem(30)!important;
-      padding-bottom: rem(30)!important;
-      .avatar {
-        width: rem(160);
-      }
-      .desc {
-        h1 {
-          font-size: $font-size-base *1.2;
-          margin-bottom: rem(10)!important;
-        }
-        h3, p {
-          font-size: $font-size-xs *1.2;
           font-weight: bold;
         }
         p {
